<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".AddPiggybank">

    <TextView
        android:id="@+id/addformtitle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/background"
        android:gravity="center"
        android:text="Add Form"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="81dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Bank Title" />
    <EditText
        android:id="@+id/piggybanktitle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:hint="@string/formTitleHint"
        android:inputType="text"
        android:textColor="#000000"
        android:textSize="16dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="81dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="GOAL AMOUNT" />
    <EditText
        android:id="@+id/piggybankamount"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:hint="@string/formAmtHint"
        android:inputType="number"
        android:textColor="#000000"
        android:textSize="16dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="81dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="DUE DATE" />
        <DatePicker
        android:id="@+id/formdatepicker"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/formCancelBtn"
            android:textColor="#000000"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000000" />

        <Button
            android:id="@+id/makeButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/formMakeBtn"
            android:textColor="#000000"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"/>

</LinearLayout>